docker 環境で環境変数はどこに書くべきか #32
https://github.com/Nao000/my-learn-golang-echo/issues/2

DB のユーザとパスワードを環境変数として設定しておく

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
     volumes:
       - ./ubuntu:/home/
     tty: true
+    environment:
+      DBUSER: root
+      DBPASS: password
   db:
     container_name: db
     build:
